vcs/specs/parser/fail/statements/provide_alias_missing_equals.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, provide, alias, error
// @description: Test provide with alias but missing equals and value
// @expected-error: E044

fn test() {
    provide Database as db;
}
